# anterofit

./: .gitignore  .travis.yml  ANNOUNCEMENT.md  Cargo.toml  GUIDE.md  LICENSE-MIT  README.md
announcements/: 0.1-release.md
examples/: get.rs  post.rs  post_service.rs  post_service_proc_macro.rs  test_service.rs
macros/: Cargo.toml
macros/src/: lib.rs
service-attr/: Cargo.toml
service-attr/examples/: post_service.rs
service-attr/src/: lib.rs
service_attr/src/: lib.rs
src/: adapter.rs  error.rs  lib.rs  macros.rs  mime.rs  mpmc.rs  service.rs
src/executor/: mod.rs  pool.rs  single.rs  threaded.rs
src/macros/: method.rs  mod.rs  proc_macro.rs  request.rs
src/net/: adapter.rs  body.rs  builder.rs  call.rs  intercept.rs  interceptor.rs  method.rs  mod.rs  request.rs  response.rs
src/parse-generics-shim/: LICENSE  mod.rs  parse_constr.rs  parse_generics_shim.rs  parse_where_shim.rs
src/serialize/: json.rs  mod.rs  none.rs  xml.rs
src/serialize/rustc/: json.rs  mod.rs
src/serialize/serde/: json.rs  mod.rs  xml.rs
