[package]
name = "anterofit"
version = "0.0.8"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "Wrap REST APIs with Rust traits using macros"

keywords = ["http", "rest", "macros", "retrofit"]

repository = "https://github.com/abonander/anterofit"

documentation = "https://docs.rs/anterofit"

license = "MIT OR Apache-2.0"

[dependencies]
crossbeam = "0.2"
futures = "0.1"
hyper = "0.9.12"
mime = ">= 0.2.2, < 0.3"
parking_lot = "0.3.7"
quick-error = "1.1.0"
url = "1.0"

rustc-serialize = { version = "0.3", optional = true }

serde = { version = "0.9 ", optional = true }
serde_json = { version = "0.9", optional = true }
# Disabled until updated to serde 0.9
# serde_xml = { version = "0.9.1", optional = true }

[dependencies.multipart]
version = "0.9.0"
default-features = false
features = ["client", "hyper"]

[features]
default = ["rustc-serialize"]
serde-all = ["serde", "serde_json" ]
nightly = ["multipart/nightly"]
# Enable this when using the `#[service]` attribute from `anterofit_service_attr`
service-attr = []
