[package]
name = "anterofit"
version = "0.2.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "Wrap REST APIs with Rust traits using macros"

keywords = ["http", "rest", "macros", "retrofit"]

repository = "https://github.com/abonander/anterofit"

documentation = "https://docs.rs/anterofit"

license = "MIT OR Apache-2.0"

[dependencies]
crossbeam = "0.2"
futures = "0.1"
hyper = "0.10.0"
mime = ">= 0.2.2, < 0.3"
parking_lot = "0.3.7"
quick-error = "1.1.0"
serde = "1.0"
url = "1.0"

serde_json = { version = "1.0", optional = true }
serde-xml-rs = { version = "0.2.1", optional = true }

clippy = { version = ">=0.0, <0.1", optional = true}

[dependencies.multipart]
version = "0.15"
default-features = false
features = ["client", "hyper"]

[dev-dependencies]
serde_derive = "1.0"

[features]
default = ["json", "xml"]
json = ["serde_json"]
xml = ["serde-xml-rs"]
nightly = ["multipart/nightly"]
# Enable this when using the `#[service]` attribute from `anterofit_service_attr`
service-attr = []
